[tool.poetry]
name = "camelot"
version = "0.20.1"
description = "PDF Table Extraction for Humans."
authors = ["Vinayak Mehta <vmehta94@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/camelot-dev/camelot"
repository = "https://github.com/camelot-dev/camelot"
documentation = "https://camelot-py.readthedocs.io"
packages = [
    { include = "camelot", from = "." },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.urls]
Changelog = "https://github.com/camelot-dev/camelot/blob/master/HISTORY.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
chardet = "^5.2.0"
numpy = "^1.26.3"
openpyxl = "^3.1.2"
pandas = "^2.1.4"
pdfminer-six = "^20231228"
pypdf = "^3.17.4"
tabulate = "^0.9.0"

[tool.poetry.group.dev.dependencies]
Pygments = "^2.17.2"
black = "^23.12.1"
coverage = {extras = ["toml"], version = "^7.4.0"}
flake8 = "^7.0.0"
flake8-bandit = "^4.1.1"
flake8-bugbear = "^24.1.17"
flake8-rst-docstrings = "^0.3.0"
furo = "^2023.9.10"
isort = "^5.13.2"
mypy = "^1.8.0"
pep8-naming = "^0.13.3"
pre-commit = "^3.6.0"
pre-commit-hooks = "^4.5.0"
pytest = "^7.4.4"
pyupgrade = "^3.15.0"
safety = "^2.3.5"
sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
sphinx-click = "^5.1.0"
typeguard = "^4.1.5"
xdoctest = {extras = ["colors"], version = "^1.1.2"}
myst-parser = "^2.0.0"

[tool.poetry.scripts]
camelot = "camelot.__main__:main"

[tool.poetry.group.base.dependencies]
ghostscript = "^0.7"
opencv-python = "^4.9.0.80"


[tool.poetry.group.plot.dependencies]
matplotlib = "^3.8.2"

[tool.coverage.paths]
source = ["camelot", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["camelot", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
